--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.1",
     "gulp-uncss": "^1.0.6",
+    "node-sass": "^4.5.2",
     "stylelint-config-standard": "^16.0.0"
   },
   "devDependencies": {
